[gd_scene load_steps=22 format=3 uid="uid://ddenh546wr0qx"]

[ext_resource type="Script" uid="uid://cn53spksaxlj" path="res://dialog/balloon/balloon.gd" id="1_pfrur"]
[ext_resource type="Material" uid="uid://dfhp0sx2b4rho" path="res://resources/material/wobble.tres" id="2_p2xnc"]
[ext_resource type="Script" path="res://scripts/tools/effect_mirror.gd" id="3_dmwhh"]
[ext_resource type="PackedScene" uid="uid://ckvgyvclnwggo" path="res://addons/dialogue_manager/dialogue_label.tscn" id="4_0e8ky"]
[ext_resource type="Script" uid="uid://bb52rsfwhkxbn" path="res://addons/dialogue_manager/dialogue_responses_menu.gd" id="5_iofpd"]
[ext_resource type="Script" path="res://addons/script-ide/icons-fonts/examples/rich_text_label_with_icons.gd" id="6_i5vc0"]

[sub_resource type="Curve" id="Curve_e5tac"]
_data = [Vector2(0.35, 0), 0.0, 1.84745, 0, 0, Vector2(1, 0.6), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_spyqn"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.329412, 0.329412, 0.329412, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ri4m3"]
bg_color = Color(0.121569, 0.121569, 0.121569, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e0njw"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.6, 0.6, 0.6, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qkmqt"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="Theme" id="Theme_qq3yp"]
default_font_size = 20
Button/styles/disabled = SubResource("StyleBoxFlat_spyqn")
Button/styles/focus = SubResource("StyleBoxFlat_ri4m3")
Button/styles/hover = SubResource("StyleBoxFlat_e0njw")
Button/styles/normal = SubResource("StyleBoxFlat_e0njw")
MarginContainer/constants/margin_bottom = 15
MarginContainer/constants/margin_left = 30
MarginContainer/constants/margin_right = 30
MarginContainer/constants/margin_top = 15
PanelContainer/styles/panel = SubResource("StyleBoxFlat_qkmqt")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pfrur"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50
expand_margin_left = 5.0
expand_margin_right = 5.0
shadow_size = 1
shadow_offset = Vector2(0, 2)

[sub_resource type="RichTextEffect" id="RichTextEffect_w6lk8"]
script = ExtResource("3_dmwhh")
metadata/_custom_type_script = "uid://b5q8ym3xn25io"

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_w6lk8"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="RichTextEffect" id="RichTextEffect_gttp8"]
script = ExtResource("3_dmwhh")
metadata/_custom_type_script = "uid://b5q8ym3xn25io"

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_p2xnc"]
bg_color = Color(0.446777, 0.446777, 0.446777, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0e8ky"]
bg_color = Color(0.787759, 0.787759, 0.787759, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dmwhh"]
bg_color = Color(0.273873, 0.273873, 0.273873, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="Theme" id="Theme_1wfgo"]
Button/colors/font_color = Color(0.87451, 0.87451, 0.87451, 0)
Button/colors/font_disabled_color = Color(0.87451, 0.87451, 0.87451, 0)
Button/colors/font_focus_color = Color(0.94902, 0.94902, 0.94902, 0)
Button/colors/font_hover_color = Color(0.94902, 0.94902, 0.94902, 0)
Button/colors/font_hover_pressed_color = Color(1, 1, 1, 0)
Button/colors/font_outline_color = Color(0, 0, 0, 0)
Button/colors/font_pressed_color = Color(1, 1, 1, 0)
Button/styles/focus = SubResource("StyleBoxFlat_p2xnc")
Button/styles/hover = SubResource("StyleBoxFlat_p2xnc")
Button/styles/normal = SubResource("StyleBoxFlat_0e8ky")
Button/styles/pressed = SubResource("StyleBoxFlat_dmwhh")

[sub_resource type="RichTextEffect" id="RichTextEffect_jtdta"]
script = ExtResource("3_dmwhh")
metadata/_custom_type_script = "uid://b5q8ym3xn25io"

[node name="BubbleBalloon" type="Node2D"]
z_index = 5
script = ExtResource("1_pfrur")

[node name="BubbleLine" type="Line2D" parent="."]
unique_name_in_owner = true
points = PackedVector2Array(509, -221, 409, -146, 261, -76, 0, 0)
width_curve = SubResource("Curve_e5tac")

[node name="BubbleContainer" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource("Theme_qq3yp")

[node name="Bubble" type="VBoxContainer" parent="BubbleContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(350, 150)
layout_mode = 2
offset_top = 9.0
offset_right = 350.0
offset_bottom = 159.0
theme_override_constants/separation = -10
alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="BubbleContainer/Bubble"]
z_index = 1
layout_mode = 2

[node name="Panel" type="PanelContainer" parent="BubbleContainer/Bubble/CenterContainer"]
custom_minimum_size = Vector2(50, 25)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_pfrur")

[node name="CharacterLabel" type="RichTextLabel" parent="BubbleContainer/Bubble/CenterContainer/Panel"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 1
theme_override_colors/default_color = Color(0, 0, 0, 1)
bbcode_enabled = true
text = "Character"
fit_content = true
scroll_active = false
autowrap_mode = 0
horizontal_alignment = 1
vertical_alignment = 1
custom_effects = [SubResource("RichTextEffect_w6lk8")]

[node name="TextBox" type="PanelContainer" parent="BubbleContainer/Bubble"]
unique_name_in_owner = true
material = ExtResource("2_p2xnc")
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_w6lk8")

[node name="TextBoxVertical" type="VBoxContainer" parent="BubbleContainer/Bubble/TextBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4

[node name="MarginDialogue" type="MarginContainer" parent="BubbleContainer/Bubble/TextBox/TextBoxVertical"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 35
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 35
theme_override_constants/margin_bottom = 15

[node name="DialogueLabel" parent="BubbleContainer/Bubble/TextBox/TextBoxVertical/MarginDialogue" instance=ExtResource("4_0e8ky")]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/default_color = Color(0, 0, 0, 1)
text = "Dialogue..."
horizontal_alignment = 1
vertical_alignment = 1
custom_effects = [SubResource("RichTextEffect_gttp8")]

[node name="MarginResponses" type="MarginContainer" parent="BubbleContainer/Bubble/TextBox/TextBoxVertical"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 50

[node name="ResponsesMenu" type="VBoxContainer" parent="BubbleContainer/Bubble/TextBox/TextBoxVertical/MarginResponses" node_paths=PackedStringArray("response_template")]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 8
script = ExtResource("5_iofpd")
response_template = NodePath("ResponseExample")

[node name="ResponseExample" type="Button" parent="BubbleContainer/Bubble/TextBox/TextBoxVertical/MarginResponses/ResponsesMenu"]
unique_name_in_owner = true
layout_mode = 2
theme = SubResource("Theme_1wfgo")
text = "Response example"

[node name="RichTextResponse" type="RichTextLabel" parent="BubbleContainer/Bubble/TextBox/TextBoxVertical/MarginResponses/ResponsesMenu/ResponseExample"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
bbcode_enabled = true
text = "Response example"
fit_content = true
scroll_active = false
autowrap_mode = 0
horizontal_alignment = 1
vertical_alignment = 1
custom_effects = [SubResource("RichTextEffect_jtdta")]
script = ExtResource("6_i5vc0")
text_with_icons = "Response example"
metadata/_custom_type_script = "uid://befnvp4s1ye1"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="InputCatcher" type="Control" parent="CanvasLayer"]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[connection signal="response_selected" from="BubbleContainer/Bubble/TextBox/TextBoxVertical/MarginResponses/ResponsesMenu" to="." method="_on_responses_menu_response_selected"]
[connection signal="gui_input" from="CanvasLayer/InputCatcher" to="." method="_on_balloon_gui_input"]
